# YAPL

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  example.yapl  main.cpp  parserResult.txt
doc/: TODO.md  highlight.lang  yapl.ebnf
include/AST/: ASTExprNode.hpp  ASTMethodExtractor.hpp  ASTNode.hpp  ASTStatementNode.hpp  ASTVisitor.hpp  Type.hpp
include/Compiler/: Compiler.hpp
include/Error/: Error.hpp  ErrorHandler.hpp
include/IRGenerator/: IRGenerator.hpp  Scope.hpp  YAPLContext.hpp  YAPLFunction.hpp  YAPLStruct.hpp  YAPLValue.hpp
include/Lexer/: Lexer.hpp  TokenUtils.hpp
include/Parser/: Parser.hpp
include/Printer/: ASTPrinter.hpp
include/Symbol/: ArrayType.hpp  FunctionType.hpp  PrimitiveType.hpp  StructType.hpp  Symbol.hpp  SymbolTable.hpp  Type.hpp  Value.hpp
include/YASA/: Yasa.hpp  YasaVisitor.hpp
libs/: CMakeLists.txt
libs/AST/: ASTExprNode.cpp  ASTMethodExtractor.cpp  ASTNode.cpp  ASTStatementNode.cpp  CMakeLists.txt  Type.cpp
libs/Compiler/: CMakeLists.txt  Compiler.cpp
libs/IRGenerator/: CMakeLists.txt  IRGenerator.cpp  Scope.cpp  YAPLContext.cpp  YAPLValue.cpp
libs/Lexer/: CMakeLists.txt  Lexer.cpp  TokenUtils.hpp
libs/Parser/: CMakeLists.txt  Parser.cpp
libs/Printer/: ASTPrinter.cpp  CMakeLists.txt
libs/Symbol/: ArrayType.cpp  CMakeLists.txt  FunctionType.cpp  PrimitveType.cpp  StructType.cpp  SymbolTable.cpp  Type.cpp  Value.cpp
libs/YASA/: CMakeLists.txt  YasaVisitor.cpp
tests/: CMakeLists.txt  simpleTest.cpp
tests/Lexer/: TestTokens.cpp
tests/catch2/: CMakeLists.txt
tests/googletest/: CMakeLists.txt
tests/googletest/src/: gtest-death-test.cc  gtest.cc
tests/yapl/: array.yapl  binary.yapl  declaration.yapl  for.yapl  funcCall.yapl  funcDef.yapl  if.yapl  literalDouble.yapl  literalInt.yapl  parserTest.yapl  struct.yapl
tests/yapl/errors/: syntax_error.yapl
